# CommonStatTools

./: .gitignore  .gitlab-ci.yml  .gitmodules  AsimovDataMaking.C  AsimovDataMaking.h  AsympoticsCLsRunner.C  AsympoticsCLsRunner.h  AsymptoticsCLsRunner.C  AsymptoticsCLsRunner.h  CMakeLists.txt  FitCrossCheckForLimits.C  FitCrossCheckForLimits.h  GetCorrMatrix.C  HistFactoryInspector.C  HistFactoryInspector.h  Minimization.C  Minimization.h  README.md  RooExpandedFitResult.C  RooExpandedFitResult.h  compareHistos.py  getCorrMatrix.C  getGlobalP0.C  getHFtables.C  getSystTable.C  obtainHistosFromWS.py  runAsymptoticsCLs.C  runFitCrossCheckForLimits.C  runSig.C  test.sh
